# msdf-atlas-gen-fork

./: .gitmodules  CMakeLists.txt
cmake/: msdf-atlas-gen-config.cmake.in
msdf-atlas-gen/: msdf-atlas-gen.h
